--- a/1.html
+++ b/1.html
@@ -21,7 +21,7 @@
 <br><br>
 <button class="btn" id="1N"></button>
 </center>
-<button class="btn btn-success l" onclick="back1()">Back</button>
+<button class="btn btn-success" onclick="back1()">Back</button>
 <script src="1.js"></script>
 </body>
 </html>
