--- a/2.html
+++ b/2.html
@@ -21,7 +21,7 @@
 <br><br>
 <button class="btn" id="2N"></button>
 </center>
-<button class="btn btn-success l" onclick="back2()">Back</button>
+<button class="btn btn-success" onclick="back2()">Back</button>
 <script src="2.js"></script>
 </body>
 </html>
