--- a/3.html
+++ b/3.html
@@ -21,6 +21,7 @@
 <br><br>
 <button class="btn" id="3N"></button>
 </center>
+<button class="btn btn-success" onclick="back3()">Back</button>
 <script src="3.js"></script>
 </body>
 </html>
