--- a/4.html
+++ b/4.html
@@ -21,7 +21,7 @@
 <br><br>
 <button class="btn" id="4N"></button>
 </center>
-<button class="btn btn-success l" onclick="back4()">Back</button>
+<button class="btn btn-success" onclick="back4()">Back</button>
 <script src="4.js"></script>
 </body>
 </html>
